--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "ethers": "^6.7.1",
     "ethersjs-nomo-plugins": "^0.1.1",
     "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
     "next": "13.4.19",
     "nomo-plugin-kit": "^0.1.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.4",
+    "@types/react-leaflet": "^3.0.0"
   }
 }
