--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethersjs-nomo-plugins": "^0.1.1",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
     "nomo-plugin-kit": "^0.1.3",
     "postcss": "8.4.30",
