--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^6.7.1",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-leaflet": "^4.2.1",
+    "sweetalert2": "^11.7.28",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
