--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "ethersjs-nomo-plugins": "^0.1.1",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
+    "mime": "^3.0.0",
     "next": "13.4.19",
+    "nft.storage": "^7.1.1",
     "nomo-plugin-kit": "^0.1.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
