--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "dayjs": "^1.11.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^6.7.1",
